--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ img {
 }
 
 .custom-link:hover {
-    color: var(--clr-heading);
+    color: var(--clr-base);
 }
 
 .custom-link:hover::after {
@@ -113,7 +113,6 @@ img {
 
 .center-container {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -232,6 +231,13 @@ img {
         display: none;
         }
 
+        #videoteca, #plans, #contact {
+            margin-left: 14em;
+        }
+        footer {
+            margin-left: 8em;
+        }
+
 }
 
 @media (max-width: 992px) {
@@ -253,6 +259,10 @@ img {
     .logo {
         display: block;
         width: 75%;
+    }
+
+    #home, #contact {
+        padding: 1em;
     }
 
 }
@@ -316,7 +326,85 @@ margin-left:5px;
 
 /* FOOTER */
 
-footer {
-    width: 100%;
+#home {
+    background-image: url('../img/6353min.jpg') !important;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+
+    
+
 }
 
+#about {
+    background-image: url('../img/_Y7A6551.jpg') !important;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+    align-items: center;
+    
+}
+
+#about h4, h5 {
+    color: var(--clr-base);
+}
+
+#plans {
+    background-image: url('../img/_Y7A6569.jpg') !important;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+    align-items: center;
+    
+
+}
+
+#flex {
+    background-image: url('../img/95052.jpg') !important;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+    align-items: center;
+    
+
+}
+
+#contact {
+    background-image: url('../img/_Y7A6924.jpg') !important;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+    align-items: center;
+    
+
+}
+
+.info-container {
+    max-width: 90%;
+    min-width: 18em;
+}
+
+.fix-height {
+    min-height: 10vh;
+}
+
+.separator {
+    min-height: 12em;
+    background-image: linear-gradient(180deg, var(--clr-bdy) 30%, var(--clr-base2) 100%)
+
+}
+
+.fix-width {
+max-width: 45em;
+
+}
