--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 h1,h2,h3,h4,h5,h6 {
-    color: var(--clr-heading);
+    color: var(--clr-base);
     font-weight: 700;
 }
 
@@ -121,19 +121,13 @@ img {
     color: var(--clr-brand);
 }
 
-.rainbow-text {
-  
-    /* Font options */
-   text-shadow: 2px 2px 4px #000000;
-   
-    /* Chrome, Safari, Opera */
-   -webkit-animation: rainbow 5s infinite; 
-   
-   /* Internet Explorer */
-   -ms-animation: rainbow 5s infinite;
-   
-   /* Standar Syntax */
-   animation: rainbow 5s infinite; 
+#rainbow-text {
+    background-clip: text;
+    background-image: linear-gradient(to right, 
+          #f44336, #ff5722, #ff9800, #ffeb3b, #cddc39, #4caf50, #2196f3, #9c27b0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
  }
  
  /* Chrome, Safari, Opera */
@@ -204,6 +198,9 @@ img {
     color: var(--clr-brand);
 
 }
+
+
+
 @media (min-width: 992px) {
     .navbar{
         min-height: 100vh;
@@ -244,6 +241,16 @@ img {
 
     .navbar {
         background: linear-gradient(rgba(37, 38, 39, 0.747), rgba(36, 37, 39, 0.712));
+    }
+
+    .navbar-toggler {
+        border-style: none;
+    }
+
+    .navbar-nav {
+        margin: 0 auto;
+        text-align: center;
+    
     }
 
     .col-md-4 {
@@ -335,7 +342,6 @@ margin-left:5px;
 
 }
 
-
 #about {
     background-image: url('https://res.cloudinary.com/dhy1g5ude/image/upload/v1678447323/gs-flex/_Y7A6551_tj6eyg.jpg') !important;
     background-position: center;
@@ -373,10 +379,12 @@ margin-left:5px;
 }
 
 #contact {
-    background-image: url('../img/_Y7A6924.jpg') !important;
+    background-image: url('https://res.cloudinary.com/dhy1g5ude/image/upload/v1678447321/gs-flex/_Y7A6924_tqpmj7.jpg') !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+    transform: translateZ(0);
     min-height: 100vh;
     align-items: center;
     
@@ -385,7 +393,14 @@ margin-left:5px;
 
 .info-container {
     max-width: 90%;
-    min-width: 18em;
+    min-width: 80em;
+}
+
+@media (max-width: 768px) {
+    .info-container {
+        max-width: 90%;
+        min-width: 15em;
+    }
 }
 
 .fix-height {
