--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,10 @@ img {
     
     }
 
+    #plans {
+        background-position: center !important;
+    }
+
     .col-md-4 {
         margin-top: 10px;
         margin-bottom: 10px;
@@ -331,21 +335,23 @@ margin-left:5px;
 /* FOOTER */
 
 #home {
-    background-image: url('https://res.cloudinary.com/dhy1g5ude/image/upload/c_fill,h_1080,w_1920/v1678447327/gs-flex/6353min_d8tbbp.webp') !important;
+    background-image: url('https://res.cloudinary.com/dhy1g5ude/image/upload/gs-flex/6353min_d8tbbp.webp') !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
+    background-attachment: fixed;
 
 }
 
 #about {
-    background-image: url('https://res.cloudinary.com/dhy1g5ude/image/upload/c_fill,h_1080,w_1920/v1678447323/gs-flex/_Y7A6551_tj6eyg.webp') !important;
+    background-image: url('https://res.cloudinary.com/dhy1g5ude/image/upload/gs-flex/_Y7A6551_tj6eyg.webp') !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
     align-items: center;
+    background-attachment: fixed;
     
 }
 
@@ -354,29 +360,31 @@ margin-left:5px;
 }
 
 #plans {
-    background-image: url('https://res.cloudinary.com/dhy1g5ude/image/upload/c_fill,h_1080,w_1920/v1678451031/gs-flex/9228_50_lmhpgq.webp') !important;
+    background-image: url('https://res.cloudinary.com/dhy1g5ude/image/upload/gs-flex/9228_50_lmhpgq.webp') !important;
     background-position: right;
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
     align-items: center;
+    background-attachment: fixed;
     
 
 }
 
 #flex {
-    background-image: url('https://res.cloudinary.com/dhy1g5ude/image/upload/c_fill,h_1080,w_1920/v1678447328/gs-flex/95052_gchh6a.webp') !important;
+    background-image: url('https://res.cloudinary.com/dhy1g5ude/image/upload/gs-flex/95052_gchh6a.webp') !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
     align-items: center;
+    background-attachment: fixed;
     
 
 }
 
 #contact {
-    background-image: url('https://res.cloudinary.com/dhy1g5ude/image/upload/c_fill,h_1080,q_100,w_1920/v1678447321/gs-flex/_Y7A6924_tqpmj7.webp') !important;
+    background-image: url('https://res.cloudinary.com/dhy1g5ude/image/upload/gs-flex/_Y7A6924_tqpmj7.webp') !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -384,6 +392,7 @@ margin-left:5px;
     transform: translateZ(0);
     min-height: 100vh;
     align-items: center;
+    background-attachment: fixed;
     
 
 }
