--- a/css/style.css
+++ b/css/style.css
@@ -344,12 +344,12 @@ margin-left:5px;
 
 }
 
-#about {
+.separator2 {
     background-image: url('https://res.cloudinary.com/dhy1g5ude/image/upload/gs-flex/_Y7A6551_tj6eyg.webp') !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100vh;
+    min-height: 30vh;
     align-items: center;
     background-attachment: fixed;
     
@@ -359,15 +359,14 @@ margin-left:5px;
     color: var(--clr-base);
 }
 
-#plans {
+.separator3 {
     background-image: url('https://res.cloudinary.com/dhy1g5ude/image/upload/gs-flex/9228_50_lmhpgq.webp') !important;
     background-position: right;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100vh;
+    min-height: 30vh;
     align-items: center;
     background-attachment: fixed;
-    
 
 }
 
@@ -378,21 +377,20 @@ margin-left:5px;
     background-size: cover;
     min-height: 100vh;
     align-items: center;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     
 
 }
 
-#contact {
+contact {
     background-image: url('https://res.cloudinary.com/dhy1g5ude/image/upload/gs-flex/_Y7A6924_tqpmj7.webp') !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
-    transform: translateZ(0);
+    /* background-attachment: fixed; */
     min-height: 100vh;
     align-items: center;
-    background-attachment: fixed;
+   
     
 
 }
@@ -407,7 +405,11 @@ margin-left:5px;
         max-width: 90%;
         min-width: 15em;
     }
+    .separator2, .separator3 {
+        background-position: -639px 167px;
+    }
 }
+
 
 .fix-height {
     min-height: 10vh;
@@ -418,7 +420,6 @@ margin-left:5px;
     z-index: 2;
     min-height: 12em;
     background-image: linear-gradient(180deg, var(--clr-bdy) 30%, var(--clr-base2) 100%)
-
 }
 
 .fix-width {
